<resources>
    <string name="app_name">TP-LINK</string>
    <string name="app_name_debug">TP-LINK-DEBUG</string>
    <string name="splash_declaration">本应用模拟小米WIfiAPP实现，仅供学习使用</string>
    <!--<string name="splash_add_new_router">添加新的路由器</string>-->
    <!--<string name="splash_login">登录</string>-->
    <!--<string name="splash_register">注册</string>-->

    <string name="login_ip_prompt">IP地址</string>
    <string name="login_ip_hint">请输入路由器IP地址</string>
    <string name="login_default_ip_value">192.168.0.1</string>
    <string name="login_password_prompt">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_account_login">登录</string>
    <string name="login_forget_password">忘记密码</string>

    <string name="main_router_type_relay">中继</string>

    <string name="client_list_empty_prompt">暂无连接的设备</string>
    <string name="reminder_open_network">请打开网络访问</string>
    <string name="reminder_switch_wifi">建议切换至WIFI</string>
    <string name="reminder_switch_wifi_button">切换</string>
</resources>
